--- a/app/views/notes/trait.js.erb
+++ b/app/views/notes/trait.js.erb
@@ -12,6 +12,7 @@ $.fancybox({
   openEffect      : 'none',
   closeEffect     : 'none',
   'href'                  : '#trait_box',
+  'centerOnScroll': true,
   helpers        :         {
     overlay                      : {
       opacity                 : 0.8,
@@ -21,3 +22,5 @@ $.fancybox({
     }
   } // end helper
 });
+
+$.fancybox.center();
