--- a/app/views/notes/_first_form.html.erb
+++ b/app/views/notes/_first_form.html.erb
@@ -82,8 +82,9 @@
               <input type='hidden' name='rate_value' value=<%= @note.rating || 0 %> />
             </div>
             <span class="text_value"></span>
+            <div class="clear"></div>
             <script type="text/template" id="star_item">
-              <%= image_tag 'base/star_gray.gif', :width => 15, :height => 14 %>
+              <%= image_tag 'base/star_gray.gif', :width => 16, :height => 16 %>
             </script>
           </td>
 
