1. 编辑品酒辞时，如果有颜色／特征等，显示可以删除 2. 添加已选择的的按钮.

--- a/app/views/notes/_trait_template.html.erb
+++ b/app/views/notes/_trait_template.html.erb
@@ -16,6 +16,7 @@
         </div>
       </div>
       <ul class="feature_catalog" id="feature_catalog">
+        <li ><a href="javascript:void(0)" data-value=-1>已选择</a></li>
         <li class="current"><a href="javascript:void(0)" data-value=0>全部</a></li>
         <% @categories.each do |parent| %>
           <li><a href="javascript:void(0)" data-value=<%= parent.id %>><%= parent.name %></a></li>
