--- a/app/views/notes/_photo_fancybox.html.erb
+++ b/app/views/notes/_photo_fancybox.html.erb
@@ -1,6 +1,7 @@
 <h3 class="title"> 上传照片 </h3>
 <%= form_for @note, :url => upload_photo_notes_path,
   :html => {:method => :post, :id => :slice_form} do |f| %>
+  <input type="hidden" name="note_id" value="<%= @note.id %>"/>
   <div class="comment_box">
     <p class="mt20">
       <div>
