user/notes  编辑、删除按钮

--- a/app/views/users/share/_notes.html.erb
+++ b/app/views/users/share/_notes.html.erb
@@ -3,12 +3,19 @@
         <% @user_notes.each_with_index do |user_note,i| %>
             <li class="clearfix"> 
                 <div class="pic"> 
-                    <% if user_note[:note].statusFlag.to_i == "1" %>
+                    <% if user_note[:note].statusFlag.to_i == 1 %>
                       <span class="label_unpublic">草稿</span> 
                     <% end %> 
                     <%= link_to cover(user_note[:photo], 'customer', '100x100', '100x100'), note_path(user_note[:note]) %>
                 </div>
                 <div class="info">
+                    <% if user_note[:user] == current_user %>
+                        <a href="#" class="icon_cancle float_r" title="删除品酒辞"></a>
+                           <% if user_note[:note].statusFlag == 1 %>
+                               <a href="#" class="icon_public float_r mr5" title="发布品酒辞"></a>
+                           <% end %>
+                        <a href="#" class="icon_edit2 float_r mr5" title="修改品酒辞"></a>
+                    <% end %>
                     <h3 class="zh">
                         <%= link_to user_note[:wine].name_zh, note_path(user_note[:note]) %>
                         <span class="date"><%= user_note[:note].created_at.to_s(:cn_short) %></span>
