--- a/app/views/users/notes.html.erb
+++ b/app/views/users/notes.html.erb
@@ -14,7 +14,7 @@
       <div class="content2" id="tab_one_2">
      <div class="left">
       <div class="title_btn">
-          <h1>品酒辞 <span class="font_12 more">(共 <%= @user_notes.total_count %> 条)</span></h1>
+          <h1>品酒辞 <span class="font_12 more">(共 <%= @user_notes.total_count %> 篇)</span></h1>
         </div>
          <%= render "users/share/notes" %>
         <div class="pagination">  
