--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -228,7 +228,7 @@
       <h3>他们也品鉴了这支酒</h3>
     </div>
     <div class="side_notes">
-      <% if @wine_note_users  %>
+      <% if @wine_note_users.present? %>
         <% @wine_note_users.each do |user_note| %>
           <dl class="clearfix">
             <dt>
