--- a/app/views/wine_details/share/_buttons.html.erb
+++ b/app/views/wine_details/share/_buttons.html.erb
@@ -32,6 +32,9 @@
 	                                  :remote => true do %>
 		<span>评论</span>
 	<% end %>
+	<%= link_to new_note_path(:wine_detail_id => @wine_detail.id), :class => "btn_gray mr5" do %>
+		<span>写品酒辞</span>
+	<% end %>
 	<%= link_to  add_to_cellar_wine_path(@wine_detail, 
 								:wine_id => @wine_detail.wine_id, 
 								:wine_detail_id => @wine_detail.id), 
