--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -18,5 +18,5 @@
   <%= image_tag "common/loading.gif", :size => "16x16", :alt => "loading", :align => :absmiddle %>
   <span>更多的内容正在载入中，请稍等...</span>
 </div> 
-<p align="center" class="end_waterfall_text_info">^_^ 已经到底了...</p>
+<p align="center" class="end_waterfall_text_info"></p>
 <%= render "layouts/waterfall_js" %>
