完善grape(品种)的加载和上传。

--- a/app/views/notes/_first_form.html.erb
+++ b/app/views/notes/_first_form.html.erb
@@ -63,8 +63,8 @@
         <tr>
           <th>葡萄品种</th>
           <td>
-            <%= variety_percentage_lists(@note.wine_detail, @note.variety) %>
-            <%= f.hidden_field :variety %>
+            <%= variety_percentage_lists(@note.wine_detail, @note.grape) %>
+            <%= f.hidden_field :grape %>
           </td>
         </tr>
         <tr>
