--- a/public/template/wine_notes_list.html
+++ b/public/template/wine_notes_list.html
@@ -46,7 +46,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
     <div id="wrapper950">
         <div id="wp_left">
         	<div class="wp_space_line top">
-            	<a href="wine_profile.html" class="btn_gray float_r"><span>写品酒辞</span></a>
+            	<a href="wine_profile.html" class="btn_gray float_r"><span>返回</span></a><a href="add_notes_s1.html" class="btn_gray float_r mr5"><span>写品酒辞</span></a>
                 <h1 class="wine_name_ch">2005 波特米勒站赤霞珠干红葡萄酒的品酒辞</h1>
                 <div class="clear"></div>
             </div>
