--- a/public/template/wine_profile.html
+++ b/public/template/wine_profile.html
@@ -5,6 +5,7 @@
 <title>iWine</title>
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/wine.css" rel="stylesheet" type="text/css" />
+<link href="stylesheets/notes.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/thumb.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
 <script src="javascripts/input.js" type="text/javascript"></script>
@@ -161,37 +162,6 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                         	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class=" star_s3_h"></span></div>
                             <div class="content">晚上6点就开瓶入Decanter醒酒，一开始感觉青椒味很重，10点半时倒入杯中呈深不见底的暗红色VS边缘的石榴红色，绝对的Full body酒体。</div>
                             <div class="userful"><a href="#">有用(3)</a> | <a href="#">回复(3)</a></div>
-                                <div class="replybox">
-                                    	<div class="top"></div>
-                                        <div class="middle">
-                                        	<div class="post clearfix"><a href="#" class="btn_gray float_r"><span>回复</span></a><textarea name="" cols="" rows=""></textarea></div>
-                                            <ul class="reply_list clearfix">
-                                            	<li>
-                                                	<div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
-                                                    <div class="main">
-                                                    	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                                                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
-                                                    </div>
-                                                </li>
-                                                <li>
-                                                	<div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
-                                                    <div class="main">
-                                                    	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                                                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
-                                                    </div>
-                                                </li>
-                                                <li>
-                                                	<div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
-                                                    <div class="main">
-                                                    	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                                                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
-                                                    </div>
-                                                </li>
-                                                <div class="clear"></div>
-                                            </ul>
-                                        </div>
-                                        <div class="botton"></div>
-                          </div>
                       </div>
                       <div class="clear"></div>
                     </li>
@@ -216,6 +186,55 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                         <div class="clear"></div>
                     </li>
                 </ul>
+                <div class="clear"></div>
+            </div>
+            <div class="wp_space_line ptb30">
+                <div class="title_btn">
+                    <a href="add_notes_s1.html" class="btn_gray float_r"><span>写品酒辞</span></a>
+                    <h2>品酒辞<span class="font12 more"><a href="wine_notes_list.html">（共24条...）</a></span></h2>
+                    <div class="clear"></div>
+                </div>
+                <ul class="notes_list">
+                        	<li class="clearfix">
+                            	<div class="left">
+                                <a href="wine_profile.html"><img src="images/test/wine100_04.jpg" width="100" height="100" alt="wine name" /></a>
+                                </div>
+                                <div class="right">
+                               	  <span class="date  float_r">2012-11-06</span>
+                                  <p>来自 <a href="#">不良夏生</a> 的品酒辞</p>
+                                  <p class="mb10">年份：2001年 | 评分：<span class="star_s2_h"></span></p>
+                                  <p>香味闭塞的一款酒，表现不能令人满意，过重的苦感加上寡淡的酒体使得该酒非常浅薄。入口比较苦，是草药的那种苦味；酒精感明显；丹宁柔弱，几乎被苦味掩盖；平衡性较差，醒酒以后变化不大。酒在舌头上感觉很干涩，没有丰富的果味来调和，酸度一般。酒体很轻，非常轻浮，没有厚度，个人感觉很寡淡。</p>
+                                  <p><a href="notes_detail.html">详细 》</a></p>
+                              </div>
+                                <div class="clear"></div>
+                            </li>
+                            <li class="clearfix">
+                            	<div class="left">
+                                <a href="wine_profile.html"><img src="images/test/wine100_04.jpg" width="100" height="100" alt="wine name" /></a>
+                                </div>
+                                <div class="right">
+                               	  <span class="date  float_r">2012-11-06</span>
+                                  <p>来自 <a href="#">不良夏生</a> 的品酒辞</p>
+                                  <p class="mb10">年份：2001年 | 评分：<span class="star_s2_h"></span></p>
+                                  <p>香味闭塞的一款酒，表现不能令人满意，过重的苦感加上寡淡的酒体使得该酒非常浅薄。入口比较苦，是草药的那种苦味；酒精感明显；丹宁柔弱，几乎被苦味掩盖；平衡性较差，醒酒以后变化不大。酒在舌头上感觉很干涩，没有丰富的果味来调和，酸度一般。酒体很轻，非常轻浮，没有厚度，个人感觉很寡淡。</p>
+                                  <p><a href="notes_detail.html">详细 》</a></p>
+                              </div>
+                                <div class="clear"></div>
+                            </li>
+                            <li class="clearfix">
+                            	<div class="left">
+                                <a href="wine_profile.html"><img src="images/test/wine100_04.jpg" width="100" height="100" alt="wine name" /></a>
+                                </div>
+                                <div class="right">
+                               	  <span class="date  float_r">2012-11-06</span>
+                                  <p>来自 <a href="#">不良夏生</a> 的品酒辞</p>
+                                  <p class="mb10">年份：2001年 | 评分：<span class="star_s2_h"></span></p>
+                                  <p>香味闭塞的一款酒，表现不能令人满意，过重的苦感加上寡淡的酒体使得该酒非常浅薄。入口比较苦，是草药的那种苦味；酒精感明显；丹宁柔弱，几乎被苦味掩盖；平衡性较差，醒酒以后变化不大。</p>
+                                  <p><a href="notes_detail.html">详细 》</a></p>
+                              </div>
+                                <div class="clear"></div>
+                            </li>
+                        </ul>
                 <div class="clear"></div>
             </div>
             <div class="wp_space_line ptb30">
