热门品酒辞

--- a/app/views/users/share/_most_notes_follows.html.erb
+++ b/app/views/users/share/_most_notes_follows.html.erb
@@ -1,15 +1,15 @@
 <ul class="sidewine">
-   <% if @user_notes.present? %> 
-   <% @user_notes.each_with_index do |user_note,i| %>
+   <% if @notes.present? %> 
+   <% @notes.each_with_index do |note,i| %>
    <% if i < 5 %>
   	<li>
-        <%= link_to cover(user_note[:photo], 'customer', '70x70', '70x70'), note_path(user_note[:note]) %> 
+        <%= link_to cover(note[:photo], 'customer', '70x70', '70x70'), note_path(note[:note]) %> 
           <div class="info">
           	<h3 class="zh">
-              <%= link_to user_note[:wine].name_zh, note_path(user_note[:note]) %>
+              <%= link_to note[:wine].name_zh, note_path(note[:note]) %>
             </h3>
-              <p class="star"><%= star_rate_tag(user_note[:wine].rating) %></p>
-              <p><%= link_to '详细 》', note_path(user_note[:note]) %></p>
+              <p class="star"><%= star_rate_tag(note[:wine].rating) %></p>
+              <p><%= link_to '详细 》', note_path(note[:note]) %></p>
         </div>
     </li> 
     <% end %>
